--- a/style.css
+++ b/style.css
@@ -59,4 +59,73 @@ nav {
 .main-content{
   height: 96%;
   width: 100%;
+  padding: 2%;
+}
+
+
+.notepad-icon{
+  height: 12%;
+  width: 6%;
+  padding: 0.2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.notepad-icon img{
+  height: 80%;
+}
+
+.outer-notepad-textarea{
+  height: 50%;
+  width: 20%;
+  background-color: #272726;
+}
+
+
+.notepad-text{
+  height: 11%;
+  color: aliceblue;
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1% 5%;
+}
+
+
+.note-right{
+  height: 80%;
+  width: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.note-right button{
+  display: flex;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+}
+
+
+
+.inner-notepad-textarea{
+  height: 88%;
+  width: 99%;
+  background-color: orange;
+}
+
+
+.inner-notepad-textarea textarea{
+  padding: 5% 6%;
+  height: 100%;
+  width: 100%;
+  background-color: orange;
 }
